[tool.poetry]
name = "mopidy-tidal"
version = "0.3.2"
description = "Mopidy Extension for Tidal music service integration."
authors = ["Johannes Linde <josaksel.dk@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "mopidy_tidal"}]
repository = "https://github.com/tehkillerbee/mopidy-tidal"
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[tool.poetry.dependencies]
python = "^3.9"
Mopidy = "^3.0"
tidalapi = {git = "https://github.com/BlackLight/python-tidal"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.7"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.complete]
optional = true

[tool.poetry.group.complete.dependencies]
pygobject = "^3.44.1"
mopidy-local = "^3.2.1"
mopidy-iris = "^3.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mopidy.ext"]
tidal = "mopidy_tidal:Extension"


[tool.pytest.ini_options]
markers = [
    "gt_3_7: Mark a test as requiring python > 3.7.",
    "gt_3_8: Mark a test as requiring python > 3.8.",
    "gt_3_9: Mark a test as requiring python > 3.9.",
    "gt_3_10: Mark a test as requiring python > 3.10.",
]